Swagger, postman y ruta/controllers en User
